# lab-04-pthread

./: CMakeLists.txt  main.c
